; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/win-capture/extr_window-helpers.c_find_window.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/win-capture/extr_window-helpers.c_find_window.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [27 x i8] c"Windows.UI.Core.CoreWindow\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @find_window(i32 %0, i32 %1, i8* %2, i8* %3, i8* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %8, align 4
  store i8* %2, i8** %9, align 8
  store i8* %3, i8** %10, align 8
  store i8* %4, i8** %11, align 8
  store i32 0, i32* %13, align 4
  %19 = load i32, i32* %7, align 4
  %20 = call i32* @first_window(i32 %19, i32** %12, i32* %13)
  store i32* %20, i32** %14, align 8
  store i32* null, i32** %15, align 8
  store i32 2147483647, i32* %16, align 4
  %21 = load i8*, i8** %9, align 8
  %22 = icmp ne i8* %21, null
  br i1 %22, label %24, label %23

23:                                               ; preds = %5
  store i32* null, i32** %6, align 8
  br label %57

24:                                               ; preds = %5
  %25 = load i8*, i8** %9, align 8
  %26 = call i64 @strcmp(i8* %25, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0))
  %27 = icmp eq i64 %26, 0
  %28 = zext i1 %27 to i32
  store i32 %28, i32* %17, align 4
  br label %29

29:                                               ; preds = %50, %24
  %30 = load i32*, i32** %14, align 8
  %31 = icmp ne i32* %30, null
  br i1 %31, label %32, label %55

32:                                               ; preds = %29
  %33 = load i32*, i32** %14, align 8
  %34 = load i32, i32* %8, align 4
  %35 = load i8*, i8** %9, align 8
  %36 = load i8*, i8** %10, align 8
  %37 = load i8*, i8** %11, align 8
  %38 = load i32, i32* %17, align 4
  %39 = call i32 @window_rating(i32* %33, i32 %34, i8* %35, i8* %36, i8* %37, i32 %38)
  store i32 %39, i32* %18, align 4
  %40 = load i32, i32* %18, align 4
  %41 = load i32, i32* %16, align 4
  %42 = icmp slt i32 %40, %41
  br i1 %42, label %43, label %50

43:                                               ; preds = %32
  %44 = load i32, i32* %18, align 4
  store i32 %44, i32* %16, align 4
  %45 = load i32*, i32** %14, align 8
  store i32* %45, i32** %15, align 8
  %46 = load i32, i32* %18, align 4
  %47 = icmp eq i32 %46, 0
  br i1 %47, label %48, label %49

48:                                               ; preds = %43
  br label %55

49:                                               ; preds = %43
  br label %50

50:                                               ; preds = %49, %32
  %51 = load i32*, i32** %14, align 8
  %52 = load i32, i32* %7, align 4
  %53 = load i32, i32* %13, align 4
  %54 = call i32* @next_window(i32* %51, i32 %52, i32** %12, i32 %53)
  store i32* %54, i32** %14, align 8
  br label %29

55:                                               ; preds = %48, %29
  %56 = load i32*, i32** %15, align 8
  store i32* %56, i32** %6, align 8
  br label %57

57:                                               ; preds = %55, %23
  %58 = load i32*, i32** %6, align 8
  ret i32* %58
}

declare dso_local i32* @first_window(i32, i32**, i32*) #1

declare dso_local i64 @strcmp(i8*, i8*) #1

declare dso_local i32 @window_rating(i32*, i32, i8*, i8*, i8*, i32) #1

declare dso_local i32* @next_window(i32*, i32, i32**, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
